# vdaf-stuff

./: Cargo.toml
src/: lib.rs
tool/: Cargo.toml
tool/src/: main.rs
